replace eventType by eventCounter EVERYWHERE in the repo
