# badges-impl/src/main/java/amt/rmgg/gamification/api/endpoints/EventCountersApiController.java
@@ -1,12 +1,12 @@
 package amt.rmgg.gamification.api.endpoints;
 
-import amt.rmgg.gamification.api.EventTypesApi;
-import amt.rmgg.gamification.api.model.EventType;
+import amt.rmgg.gamification.api.EventCountersApi;
+import amt.rmgg.gamification.api.model.EventCounter;
 import amt.rmgg.gamification.api.util.ApiKeyManager;
 import amt.rmgg.gamification.entities.ApplicationEntity;
-import amt.rmgg.gamification.entities.EventTypeEntity;
+import amt.rmgg.gamification.entities.EventCounterEntity;
 import amt.rmgg.gamification.repositories.AppRepository;
-import amt.rmgg.gamification.repositories.EventTypeRepository;
+import amt.rmgg.gamification.repositories.EventCounterRepository;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -25,7 +25,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Controller
-public class EventTypesApiController implements EventTypesApi {
+public class EventCountersApiController implements EventCountersApi {
     @Autowired
     private ApiKeyManager apiKeyManager;
     @Autowired
@@ -33,10 +33,10 @@ public class EventTypesApiController implements EventTypesApi {
     @Autowired
     HttpServletRequest httpServletRequest;
     @Autowired
-    EventTypeRepository eventTypeRepository;
+    EventCounterRepository eventCounterRepository;
 
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<EventType> createEventType(@ApiParam(value = "", required = true) @Valid @RequestBody EventType eventType ) {
+    public ResponseEntity<EventCounter> createEventCounter(@ApiParam(value = "", required = true) @Valid @RequestBody EventCounter eventCounter ) {
 
         String apikey = httpServletRequest.getHeader("x-api-key");
         ApplicationEntity applicationEntity = apiKeyManager.getApplicationEntityFromApiKey(apikey);
@@ -45,65 +45,65 @@ public class EventTypesApiController implements EventTypesApi {
             return ResponseEntity.notFound().build();
         }
 
-        EventTypeEntity newEventTypeEntity = toEventTypeEntity(eventType);
-        applicationEntity.getEventTypes().add(newEventTypeEntity);
+        EventCounterEntity newEventCounterEntity = toEventCounterEntity(eventCounter);
+        applicationEntity.getEventCounters().add(newEventCounterEntity);
 
-        eventTypeRepository.save(newEventTypeEntity);
+        eventCounterRepository.save(newEventCounterEntity);
 
         try {
-            return ResponseEntity.created(new URI("/eventTypes/" + newEventTypeEntity.getId())).body(toEventType(newEventTypeEntity));
+            return ResponseEntity.created(new URI("/eventCounters/" + newEventCounterEntity.getId())).body(toEventCounter(newEventCounterEntity));
         } catch (URISyntaxException e) {
             e.printStackTrace();
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
         }
     }
 
-    public ResponseEntity<List<EventType>> getEventTypes() {
+    public ResponseEntity<List<EventCounter>> getEventCounters() {
         String apikey = httpServletRequest.getHeader("x-api-key");
         ApplicationEntity applicationEntity = apiKeyManager.getApplicationEntityFromApiKey(apikey);
 
         return ResponseEntity.ok(
                 applicationEntity
-                        .getEventTypes()
+                        .getEventCounters()
                         .stream()
-                        .map(EventTypesApiController::toEventType)
+                        .map(EventCountersApiController::toEventCounter)
                         .collect(Collectors.toList()));
     }
 
     @Override
-    public ResponseEntity<EventType> getEventType(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
+    public ResponseEntity<EventCounter> getEventCounter(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
         String apikey = httpServletRequest.getHeader("x-api-key");
         ApplicationEntity applicationEntity = apiKeyManager.getApplicationEntityFromApiKey(apikey);
 
-        List<EventTypeEntity> eventTypes = applicationEntity
-                .getEventTypes()
+        List<EventCounterEntity> eventCounters = applicationEntity
+                .getEventCounters()
                 .stream()
                 .filter(et -> et.getId() == id)
                 .limit(1)
                 .collect(Collectors.toList());
 
-        if(eventTypes.size() != 1){
+        if(eventCounters.size() != 1){
             throw new ResponseStatusException(HttpStatus.NOT_FOUND);
         }
-        EventTypeEntity eventTypeEntity = eventTypes.get(0);
-        return ResponseEntity.ok(toEventType(eventTypeEntity));
+        EventCounterEntity eventCounterEntity = eventCounters.get(0);
+        return ResponseEntity.ok(toEventCounter(eventCounterEntity));
     }
 
 
-    public static EventTypeEntity toEventTypeEntity(EventType eventType) {
-        EventTypeEntity entity = new EventTypeEntity();
-        entity.setName(eventType.getName());
+    public static EventCounterEntity toEventCounterEntity(EventCounter eventCounter) {
+        EventCounterEntity entity = new EventCounterEntity();
+        entity.setName(eventCounter.getName());
         entity.setInitialValue(entity.getInitialValue());
         return entity;
     }
 
 
-    public static EventType toEventType(EventTypeEntity entity){
-        EventType eventType = new EventType();
-        eventType.setId(entity.getId());
-        eventType.setName(entity.getName());
-        eventType.setInitialValue(entity.getInitialValue());
-        return eventType;
+    public static EventCounter toEventCounter(EventCounterEntity entity){
+        EventCounter eventCounter = new EventCounter();
+        eventCounter.setId(entity.getId());
+        eventCounter.setName(entity.getName());
+        eventCounter.setInitialValue(entity.getInitialValue());
+        return eventCounter;
     }
 
 }
